# dev-install

./: .ansible-lint  .gitignore  Makefile  README.md  ansible.cfg  install_stack.yaml  local_os_client.yaml  requirements.yaml
.github/workflows/: ansible-lint.yml
example-overrides/: local-overrides-basic.yaml  local-overrides-centos8-tripleo-master.yaml  local-overrides-centos8-tripleo-train.yaml  local-overrides-centos9-tripleo-master.yaml  local-overrides-osp16-2-with-dpdk.yaml  local-overrides-osp16-2-with-pcipassthrough.yaml  local-overrides-osp16-2-with-sriov-and-dpdk.yaml  local-overrides-osp16-2-with-sriov.yaml  local-overrides-osp16-2.yaml  local-overrides-osp17-0.yaml  local-overrides-osp17-1-with-dpdk.yaml  local-overrides-osp17-1-with-sriov-and-dpdk.yaml  local-overrides-osp17-1-with-sriov.yaml  local-overrides-rhel8_2-tripleo-osp16-1.yaml  local-overrides-rhel8_4-tripleo-osp16-2.yaml
files/: containers-prepare-parameters.yaml  create_if
playbooks/: certs.yaml  destroy.yaml  install_stack.yaml  local_os_client.yaml  local_requirements.yaml  network.yaml  post_install.yaml  prepare_host.yaml  prepare_stack.yaml  prepare_stack_testconfig.yaml  validations.yaml
templates/: dummy.service.j2
tools/dsal/: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
tools/dsal/dsal_helper/: dsal_helper.py
tools/dsal/dsal_helper/templates/: install-config.yaml.tpl  local-overrides-16.2.yaml.tpl
tools/dsal/scripts/: fix-down-ports.sh  get-latest.sh  open-ssh.sh  reprovision.sh
tools/dsal/templates/: install-config.yaml.tpl
vars/: defaults.yaml
(+36 files in other folders)
