[metadata]
name = dsal-helper
version = 0.1.0
author = Michał Dulko
author_email = mdulko@redhat.com
description = Helper scripts to provision boxes with OpenShift on OpenStack
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    jinja2
    netaddr
    openstacksdk

[options.entry_points]
console_scripts =
    dsal-helper = dsal_helper.dsal_helper:main

[options.package_data]
* = *.tpl
